terraform/k8s/2-rabbitmq-deployment-green.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mq-service-green
  labels:
    app: mq-service-green
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  selector:
    matchLabels:
      app: mq-service-green
  template:
    metadata:
      labels:
        app: mq-service-green
    spec:
      containers:
      - name: mq-service-green
        image: path/ishara-usoof/rabbitmq:alpine
        ports:
        - containerPort: 5672
