terraform/k8s/4-products-deployment-green.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: products-service-green
  labels:
    app: products-service-green
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  selector:
    matchLabels:
      app: products-service-green
  template:
    metadata:
      labels:
        app: products-service-green
    spec:
      containers:
      - name: products-service-green
        image: path/ishara-usoof/products:latest
        ports:
        - containerPort: 8002
