terraform/k8s/5-shopping-deployment-green.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shopping-service-green
  labels:
    app: shopping-service-green
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  selector:
    matchLabels:
      app: shopping-service-green
  template:
    metadata:
      labels:
        app: shopping-service-green
    spec:
      containers:
      - name: shopping-service-green
        image: path/ishara-usoof/shopping:latest
        ports:
        - containerPort: 8003
