terraform/k8s/1-mongodb-service-green.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongodb-service-green
  type: ClusterIP
  ports:
  - protocol: TCP
    port: 27017
    targetPort: 27017
  selector:
    app: mongodb-service-green
