terraform/k8s/2-rabbitmq-service-green.yaml
apiVersion: v1
kind: Service
metadata:
  name: mq-service-green
spec:
  type: LoadBalancer
  ports:
  - protocol: TCP
    port: 5672
    targetPort: 5672
  selector:
    app: mq-service-green
