terraform/k8s/3-customer-service-green.yaml
apiVersion: v1
kind: Service
metadata:
  name: customer-service-green
spec:
  type: LoadBalancer
  ports:
  - protocol: TCP
    port: 8001
    targetPort: 8001
  selector:
    app: customer-service-green
