terraform/k8s/4-products-service-blue.yaml
apiVersion: v1
kind: Service
metadata:
  name: products-service-blue
spec:
  type: LoadBalancer
  ports:
  - protocol: TCP
    port: 8002
    targetPort: 8002
  selector:
    app: products-service-blue
