terraform/k8s/5-shopping-service-blue.yaml
apiVersion: v1
kind: Service
metadata:
  name: shopping-service-blue
spec:
  type: LoadBalancer
  ports:
  - protocol: TCP
    port: 8003
    targetPort: 8003
  selector:
    app: shopping-service-blue
